objects/gvp__User_Log__c.object
<CustomObject>
    <fields>
        <fullName>gvp__Connection_Type__c</fullName>
        <label>Connection Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Database_Size_mb__c</fullName>
        <label>Database Size (MB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Device_Free_Storage_gb__c</fullName>
        <label>Device Free Storage (GB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Device_Log_Id__c</fullName>
        <label>Device Log Id</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>gvp__Device_Memory_gb__c</fullName>
        <label>Device Memory (GB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Device_Model__c</fullName>
        <label>Device Model</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Device_Name__c</fullName>
        <label>Device Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Device_Usable_Storage_gb__c</fullName>
        <label>Device Usable Storage (GB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>gvp__GV_Mobile_Last_Full_Sync__c</fullName>
        <label>GV Mobile Last Full Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>gvp__GV_Mobile_Last_Initialized__c</fullName>
        <label>GV Mobile Last Initialized</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>gvp__GV_Mobile_Last_Logout__c</fullName>
        <label>GV Mobile Last Logout</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>gvp__GV_Mobile_Last_Upgrade__c</fullName>
        <label>GV Mobile Last Upgrade</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>gvp__GV_Mobile_Total_Unsynced_Records__c</fullName>
        <label>GV Mobile Total Unsynced Records</label>
        <summarizedField>gvp__Mobile_Summary__c.gvp__Unsynced_Records__c</summarizedField>
        <summaryForeignKey>gvp__Mobile_Summary__c.gvp__User_Log__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>gvp__GV_Mobile_Version__c</fullName>
        <label>GV Mobile Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__OS_Version__c</fullName>
        <label>OS Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Sync_Duration_s__c</fullName>
        <label>Sync Duration (s)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mobile_User_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__WebView__c</fullName>
        <label>WebView</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Mobile User Log</label>
    <listViews>
        <fullName>All_Logs_for_GV</fullName>
        <columns>NAME</columns>
        <columns>gvp__User__c</columns>
        <columns>gvp__OS_Version__c</columns>
        <columns>gvp__GV_Mobile_Total_Unsynced_Records__c</columns>
        <columns>gvp__Device_Model__c</columns>
        <columns>gvp__GV_Mobile_Version__c</columns>
        <columns>gvp__Device_Free_Storage_gb__c</columns>
        <columns>gvp__GV_Mobile_Last_Full_Sync__c</columns>
        <columns>gvp__GV_Mobile_Last_Initialized__c</columns>
        <columns>gvp__GV_Mobile_Last_Logout__c</columns>
        <columns>gvp__GV_Mobile_Last_Upgrade__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Logs for GV</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>gvp__All</fullName>
        <columns>NAME</columns>
        <columns>gvp__User__c</columns>
        <columns>gvp__OS_Version__c</columns>
        <columns>gvp__GV_Mobile_Total_Unsynced_Records__c</columns>
        <columns>gvp__GV_Mobile_Last_Full_Sync__c</columns>
        <columns>gvp__Device_Model__c</columns>
        <columns>gvp__GV_Mobile_Version__c</columns>
        <columns>gvp__Device_Free_Storage_gb__c</columns>
        <columns>gvp__GV_Mobile_Last_Initialized__c</columns>
        <columns>gvp__GV_Mobile_Last_Logout__c</columns>
        <columns>gvp__GV_Mobile_Last_Upgrade__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>gvp__Device_Model__c</field>
            <operation>contains</operation>
            <value>iPad7,4,iPad8,3</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>notContain</operation>
            <value>Cote,Walsh,Costantini,MobileTest,Tomicic,Gallagher,Grondin-Stocks</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>notContain</operation>
            <value>Brockett,Smith,Thorne,McBride,Mackay,St Jean</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>notContain</operation>
            <value>Landry,Palson,Perron,McPhail,Leblanc,Lendl,Fuchs,Hollihan,Barchiesi,Dybenko</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Mobile-{0000000}</displayFormat>
        <label>Mobile User Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile User Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>